[tool.poetry]
name = "lyft-bikes"
version = "0.1.2"
description = "Python Client for Lyft Bike Sharing Data."
authors = ["Will Dean <wd60622@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://wd60622.github.io/lyft-bikes/"
documentation = "https://wd60622.github.io/lyft-bikes/"
repository = "https://github.com/wd60622/lyft-bikes/"
packages = [
    { include = "lyft_bikes" },
    { include = "lyft_bikes/py.typed" },
    { include = "lyft_bikes/geo/*" },
]
classifiers = [
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries",
    "Topic :: Scientific/Engineering",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Operating System :: POSIX",
    "Operating System :: Unix",
    "Operating System :: MacOS",
]

[tool.poetry.dependencies]
python = ">=3.8,<4.0"
pandas = "*"
requests = "*"
geopandas = { version = "*", optional = true}

[tool.poetry.extras]
boundary = ["geopandas"]

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.2"
pytest-cov = "^4.1.0"
black = "^23.3.0"
ipython = "8.8.0"
matplotlib = "^3.7.2"


[tool.poetry.group.docs.dependencies]
mkdocs = "^1.4.3"
mkdocs-material = "^9.1.17"
mkdocstrings = {extras = ["python"], version = "^0.22.0"}

[tool.ruff]
line-length = 88

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"**/tests/*" = ["S101"]

[tool.pytest.ini_options]
minversion = 6.0
addopts = "--cov=lyft_bikes --cov-report=xml --cov-report=term-missing"
testpaths = ["tests"]

[tool.tox]
legacy_tox_ini = """
    [tox]
    min_version = 4.0
    isolated_build = true
    env_list =
        # tox and distutils
        py312
        py311
        py310
        py39

    [testenv]
    deps =
        pytest
        pytest-cov
    commands = pytest
"""

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
